Fixed extra spacing in list.

--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -49,6 +49,7 @@
 			list-style: none;
 			padding-left: 0;
 			margin-top: -0.675em;
+			margin-bottom: 0em;
 
 			li {
 				padding: 0.5em 0.2em;
